tests/ui/issues/issue-41880.stderr
error[E0599]: no method named `iter` found for struct `Iterate<T, F>` in the current scope
  --> $DIR/issue-41880.rs:27:24
   |
LL | pub struct Iterate<T, F> {
   | ------------------------ method `iter` not found for this struct
...
LL |     println!("{:?}", a.iter().take(10).collect::<Vec<usize>>());
   |                        ^^^^ method not found in `Iterate<{integer}, {closure@$DIR/issue-41880.rs:26:24: 26:27}>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
